# kensuiou-localserver

./: .gitignore  Dockerfile  pyproject.toml
src/: db.py  main.py  predict.py
